...
            "value" : "Klassische Musik"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Classical Music"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Música clásica"
...
    "Learning Data Reset" : {

    },
    "Learning Status" : {

    },
    "Library" : {

    },
    "Listening for cry" : {

    },
    "Listening..." : {
...
            "value" : "Startseite"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
...
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
    "Not Now" : {

    },
    "Now Playing" : {

    },
    "NOW PLAYING" : {

    },
    "Offline Content Ready" : {

    },
    "OK" : {
...
            "value" : "Als nächstes"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Up Next"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A continuación"
...
            "state" : "translated",
            "value" : "升级到高级版"
          }
        }
      }
    },
    "QUEUE" : {

    },
    "Quick Picks" : {

    },
    "Quick Start" : {
...
