...
                .foregroundColor(.blue)

            Text("Welcome to")
                .font(.caption)
                .foregroundColor(.secondary)

            Text("Baby in Car")
                .font(.headline)

            Text("Companion App")
                .font(.subheadline)
                .foregroundColor(.secondary)

...
